--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,9 @@
 }
 .content-img img {
   width: 60%;
-  position: absolute;
+  margin: 0 0 0 auto;
   top: 10px;
-  right: 0;
-  z-index: 0;
+  display: block;
 }
 .title {
   font-family: 'Indie Flower', cursive;
@@ -68,5 +67,202 @@
   font-size: 16px;
 }
 .date {
-  max-width: 1500px;
+  width: 50%;
+  margin: 0 auto;
 }
+.wrap {
+  font-family: 'Indie Flower', cursive;
+  color: purple;
+  font-weight: bold;
+  margin-bottom: 10px;
+  margin-top: 100px;
+}
+.date-text h2 {
+  color: grey;
+  font-size: 24px;
+  border-bottom: 3px solid rgba(220, 220, 220, 0.8);
+  padding-bottom: 20px;
+}
+.date-list1, .date-list2, .date-list3, .date-list4, .date-list5 {
+  padding-top: 50px;
+  color: rgba(128, 128, 128, 0.7);
+  font-size: 16px;
+  font-weight: bold;
+  border-bottom: 1px solid rgba(220, 220, 220, 0.8);
+  padding-bottom: 10px;
+}
+.item1, .item2, .item3, .item4, .item5 {
+  display: inline-block;
+  margin: 0 30px;
+  width: 120px;
+  height: 20px;
+  background: purple;
+  color: white;
+  text-align: center;
+  border-radius: 30px;
+  font-size: 16px;
+  padding: 5px 0 0 0;
+}
+.bottom {
+  border-bottom: 3px solid rgba(220, 220, 220, 0.8);
+  padding-top: 20px;
+  margin-bottom: 100px;
+}
+.message {
+  max-width: 1500px;
+  background: rgba(220, 220, 220, 0.5); 
+  padding: 30px 0;
+  position: relative; 
+}
+.message-text {
+  width: 380px;
+  height: 120px;
+  padding: 10px;
+  margin: 0 auto;
+}
+.message-text p {
+  font-family: 'Indie Flower', cursive;
+  color: purple;
+  padding-top: 30px;
+  font-weight: bold;
+  text-align: center;
+}
+.message-text h2 {
+  font-size: 24px;
+  font-weight: bold;
+  color: gray;
+  text-align: center;
+  padding-top: 30px;
+}
+.message-title {
+  width: 400px;
+  height: 250px;
+  padding: 0 10px;
+}
+.message-img img {
+  width: 400px;
+  height: 250px;
+  position: absolute;
+  top: 30%;
+  right: 17%;
+  margin-top: 30px;
+}
+.message-list {
+  position: absolute;
+  top: 30%;
+  left: 19%;
+  margin-top: 30px;
+}
+.message-list p {
+  color: rgba(128, 128, 128, 0.8);
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 30px;
+  text-align: left;
+  letter-spacing: 1px;
+}
+.message-list1 {
+  padding-bottom: 15px;
+}
+.service {
+  max-width: 1500px;
+  width: 70%;
+  margin: 50px auto 0;
+}
+.service-text {
+  padding: 10px;
+  display: inline-block;
+}
+.service-text p {
+  font-family: 'Indie Flower', cursive;
+  color: purple;
+  padding-top: 30px;
+  font-weight: bold;
+}
+.service-text h2 {
+  color: grey;
+  font-size: 24px;
+  padding-top: 15px;
+  letter-spacing: 2px;
+  padding-bottom: 30px;
+}
+.service-list {
+  display: grid;
+  grid-template-rows: 50% 50%;
+  grid-template-columns: 1fr 1fr;
+  color: white;
+}
+.service-item1 {
+  grid-row: 1/3;
+  grid-column: 1/2;
+  padding: 30px;
+  background-color: purple;
+  display: inline-block;
+}
+.service-item1 img {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  display: block;
+  padding-top: 30px;
+}
+.service-item1 h3 {
+  font-size: 20px;
+  padding-top: 30px;
+  text-align: center;
+  padding-top: 20px;
+}
+.service-item1 p {
+  font-size: 16px;
+  padding-top: 30px;
+  letter-spacing: 3px;
+}
+.service-item2 {
+  grid-row: 1/2;
+  grid-column: 2/3;
+  background-color: rgba(128, 0, 128, 0.7);
+  padding: 20px;
+}
+.service-item2 img {
+  width: 100px;
+  height: 100px;
+  float: left;
+}
+.service-item2 h3 {
+  font-size: 20px;
+  padding-top: 20px;
+  margin-left: 20px;
+  display: inline-block;
+}
+.service-item2 p {
+  font-size: 16px;
+  padding-top: 20px;
+  margin-left: 20px;
+  line-height: 20px;
+  display: inline-block;
+}
+.service-item3 {
+  grid-row: 2/3;
+  grid-column: 2/3;
+  background-color: rgba(128, 0, 128, 0.4);
+  padding: 20px;
+}
+.service-item3 img {
+  width: 100px;
+  height: 100px;
+  float: left;
+}
+.service-item3 h2 {
+  font-size: 20px;
+  padding-top: 20px;
+  margin-left: 20px;
+  display: inline-block;
+} 
+.service-item3 p {
+  font-size: 16px;
+  padding-top: 20px;
+  margin-left: 20px;
+  line-height: 20px;
+  display: inline-block;
+}
+
