--- a/css/style.css
+++ b/css/style.css
@@ -188,23 +188,23 @@
 }
 .service-list {
   display: grid;
-  grid-template-rows: 50% 50%;
+  grid-template-rows: 230px 230px;
   grid-template-columns: 1fr 1fr;
   color: white;
+  margin-bottom: 80px;
 }
 .service-item1 {
   grid-row: 1/3;
   grid-column: 1/2;
-  padding: 30px;
+  padding: 50px;
   background-color: purple;
   display: inline-block;
 }
 .service-item1 img {
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
   margin: 0 auto;
   display: block;
-  padding-top: 30px;
 }
 .service-item1 h3 {
   font-size: 20px;
@@ -216,6 +216,7 @@
   font-size: 16px;
   padding-top: 30px;
   letter-spacing: 3px;
+  line-height: 30px;
 }
 .service-item2 {
   grid-row: 1/2;
@@ -224,21 +225,22 @@
   padding: 20px;
 }
 .service-item2 img {
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
   float: left;
+  padding-top: 10px;
 }
 .service-item2 h3 {
   font-size: 20px;
-  padding-top: 20px;
+  padding-top: 30px;
   margin-left: 20px;
   display: inline-block;
 }
 .service-item2 p {
   font-size: 16px;
-  padding-top: 20px;
+  padding-top: 30px;
   margin-left: 20px;
-  line-height: 20px;
+  line-height: 30px;
   display: inline-block;
 }
 .service-item3 {
@@ -248,21 +250,22 @@
   padding: 20px;
 }
 .service-item3 img {
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
   float: left;
+  padding-top: 10px;
 }
-.service-item3 h2 {
+.service-item3 h3 {
   font-size: 20px;
-  padding-top: 20px;
+  padding-top: 30px;
   margin-left: 20px;
   display: inline-block;
 } 
 .service-item3 p {
   font-size: 16px;
-  padding-top: 20px;
+  padding-top: 30px;
   margin-left: 20px;
-  line-height: 20px;
+  line-height: 30px;
   display: inline-block;
 }
 
